--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
    
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
     <title>Your Eye</title>
   </head>
